--- a/CSharpBible/MVVM_Tutorial/MVVM_36_ComToolKtSavesWork/Views/CommunityToolkit2View.xaml
+++ b/CSharpBible/MVVM_Tutorial/MVVM_36_ComToolKtSavesWork/Views/CommunityToolkit2View.xaml
@@ -1,42 +1,47 @@
-﻿<Page x:Class="MVVM_36_ComToolKtSavesWork.Views.CommunityToolkit2View"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:MVVM_36_ComToolKtSavesWork.Views"
-      xmlns:vc="clr-namespace:MVVM_36_ComToolKtSavesWork.ValueConverter"
-      xmlns:mvvm="clr-namespace:MVVM_36_ComToolKtSavesWork.ViewModels"
-      xmlns:model="clr-namespace:MVVM_36_ComToolKtSavesWork.Models"
-       xmlns:ioc="clr-namespace:MVVM.View.Extension;assembly=MVVM_BaseLib"
-       xmlns:uc="clr-namespace:MVVM_36_ComToolKtSavesWork.Views.UserControls"  
-      xmlns:p="clr-namespace:MVVM_36_ComToolKtSavesWork.Properties"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="CommunityToolkit2View"
-      DataContext="{ioc:IoC2 Type=mvvm:CommunityToolkit2ViewModel}">
+﻿<Page
+    x:Class="MVVM_36_ComToolKtSavesWork.Views.CommunityToolkit2View"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:ioc="clr-namespace:MVVM.Views.Extension;assembly=MVVM_BaseLib"
+    xmlns:local="clr-namespace:MVVM_36_ComToolKtSavesWork.Views"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:model="clr-namespace:MVVM_36_ComToolKtSavesWork.Models"
+    xmlns:mvvm="clr-namespace:MVVM_36_ComToolKtSavesWork.ViewModels"
+    xmlns:p="clr-namespace:MVVM_36_ComToolKtSavesWork.Properties"
+    xmlns:uc="clr-namespace:MVVM_36_ComToolKtSavesWork.Views.UserControls"
+    xmlns:vc="clr-namespace:MVVM_36_ComToolKtSavesWork.ValueConverter"
+    Title="CommunityToolkit2View"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    DataContext="{ioc:IoC2 Type=mvvm:CommunityToolkit2ViewModel}"
+    mc:Ignorable="d">
     <Page.Resources>
-        <vc:DateTimeValueConverter x:Key="DateTimeValueConverter"/>
-        <vc:Bool2VisibilityConverter x:Key="Bool2Visibility"/>
+        <vc:DateTimeValueConverter x:Key="DateTimeValueConverter" />
+        <vc:Bool2VisibilityConverter x:Key="Bool2Visibility" />
     </Page.Resources>
     <d:Page.DataContext>
-        <mvvm:CommunityToolkit2ViewModel/>
+        <mvvm:CommunityToolkit2ViewModel />
     </d:Page.DataContext>
     <StackPanel Background="Silver">
-        <Label Content="{x:Static p:Resources.pg1_Title}"/>
+        <Label Content="{x:Static p:Resources.pg1_Title}" />
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
             </Grid.ColumnDefinitions>
-            <TextBlock Text="{Binding Now, ConverterParameter=yyyy-MM-dd HH:mm:ss, Converter={StaticResource DateTimeValueConverter}, Mode=OneWay}"/>
+            <TextBlock Text="{Binding Now, ConverterParameter=yyyy-MM-dd HH:mm:ss, Converter={StaticResource DateTimeValueConverter}, Mode=OneWay}" />
             <uc:UserInfoControl Grid.Column="2" />
-            <uc:LoginControl Grid.Column="1" Grid.Row="1" Visibility="{Binding DataContext.ShowLogin, Converter={StaticResource Bool2Visibility}, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:CommunityToolkit2View}}}"/>
+            <uc:LoginControl
+                Grid.Row="1"
+                Grid.Column="1"
+                Visibility="{Binding DataContext.ShowLogin, Converter={StaticResource Bool2Visibility}, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:CommunityToolkit2View}}}" />
         </Grid>
     </StackPanel>
 </Page>
