--- a/CSharpBible/MVVM_Tutorial/MVVM_36_ComToolKtSavesWork/Views/UserControls/UserInfoControl.xaml
+++ b/CSharpBible/MVVM_Tutorial/MVVM_36_ComToolKtSavesWork/Views/UserControls/UserInfoControl.xaml
@@ -1,30 +1,32 @@
-﻿<UserControl x:Class="MVVM_36_ComToolKtSavesWork.Views.UserControls.UserInfoControl"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:MVVM_36_ComToolKtSavesWork.Views.UserControls"
-             xmlns:ioc="clr-namespace:MVVM.View.Extension;assembly=MVVM_BaseLib"
-             xmlns:mvvm="clr-namespace:MVVM_36_ComToolKtSavesWork.ViewModels"
-             xmlns:vc="clr-namespace:MVVM_36_ComToolKtSavesWork.ValueConverter"
-             xmlns:p="clr-namespace:MVVM_36_ComToolKtSavesWork.Properties"
-             mc:Ignorable="d" 
-             d:DesignHeight="130" d:DesignWidth="400"
-             DataContext="{ioc:IoC2 Type=mvvm:UserInfoViewModel}">
+﻿<UserControl
+    x:Class="MVVM_36_ComToolKtSavesWork.Views.UserControls.UserInfoControl"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:ioc="clr-namespace:MVVM.Views.Extension;assembly=MVVM_BaseLib"
+    xmlns:local="clr-namespace:MVVM_36_ComToolKtSavesWork.Views.UserControls"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:mvvm="clr-namespace:MVVM_36_ComToolKtSavesWork.ViewModels"
+    xmlns:p="clr-namespace:MVVM_36_ComToolKtSavesWork.Properties"
+    xmlns:vc="clr-namespace:MVVM_36_ComToolKtSavesWork.ValueConverter"
+    d:DesignHeight="130"
+    d:DesignWidth="400"
+    DataContext="{ioc:IoC2 Type=mvvm:UserInfoViewModel}"
+    mc:Ignorable="d">
     <d:UserControl.DataContext>
         <mvvm:UserInfoViewModel />
     </d:UserControl.DataContext>
     <UserControl.Resources>
-        <vc:Bool2VisibilityConverter x:Key="Bool2Visibility"/>
+        <vc:Bool2VisibilityConverter x:Key="Bool2Visibility" />
     </UserControl.Resources>
     <StackPanel HorizontalAlignment="Right">
         <StackPanel Orientation="Horizontal" Visibility="{Binding ShowUser, Converter={StaticResource Bool2Visibility}}">
-            <Label Content="{x:Static p:Resources.uictrl_Welcome}"/>
+            <Label Content="{x:Static p:Resources.uictrl_Welcome}" />
             <Label Content="{Binding User.Username}" />
         </StackPanel>
         <StackPanel Orientation="Horizontal" Visibility="{Binding ShowLogin, Converter={StaticResource Bool2Visibility}}">
-            <Label Content="{x:Static p:Resources.uictrl_NotLoggedIn}"/>
-            <Button Content="{x:Static p:Resources.uictrl_Login}" Command="{Binding ShowLoginCtrlCommand}"/>
+            <Label Content="{x:Static p:Resources.uictrl_NotLoggedIn}" />
+            <Button Command="{Binding ShowLoginCtrlCommand}" Content="{x:Static p:Resources.uictrl_Login}" />
         </StackPanel>
     </StackPanel>
 </UserControl>
