--- a/CSharpBible/MVVM_Tutorial/MVVM_37_TreeView/Views/BooksTreeView.xaml
+++ b/CSharpBible/MVVM_Tutorial/MVVM_37_TreeView/Views/BooksTreeView.xaml
@@ -1,57 +1,59 @@
-﻿<Page x:Class="MVVM_37_TreeView.Views.BooksTreeView"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:behav="http://schemas.microsoft.com/xaml/behaviors"  
-      xmlns:local="clr-namespace:MVVM_37_TreeView.Views"
-      xmlns:vc="clr-namespace:MVVM_37_TreeView.ValueConverter"
-      xmlns:mvvm="clr-namespace:MVVM_37_TreeView.ViewModels"
-      xmlns:ioc="clr-namespace:MVVM.View.Extension;assembly=MVVM_BaseLib"
-      xmlns:model="clr-namespace:MVVM_37_TreeView.Models"
-      mc:Ignorable="d" 
-      DataContext="{ioc:IoC2 Type=mvvm:BooksTreeViewModel}"
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="Books TreeView">
+﻿<Page
+    x:Class="MVVM_37_TreeView.Views.BooksTreeView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:behav="http://schemas.microsoft.com/xaml/behaviors"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:ioc="clr-namespace:MVVM.Views.Extension;assembly=MVVM_BaseLib"
+    xmlns:local="clr-namespace:MVVM_37_TreeView.Views"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:model="clr-namespace:MVVM_37_TreeView.Models"
+    xmlns:mvvm="clr-namespace:MVVM_37_TreeView.ViewModels"
+    xmlns:vc="clr-namespace:MVVM_37_TreeView.ValueConverter"
+    Title="Books TreeView"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    DataContext="{ioc:IoC2 Type=mvvm:BooksTreeViewModel}"
+    mc:Ignorable="d">
     <Page.Resources>
-        <vc:DateTimeValueConverter x:Key="DateTimeValueConverter"/>
+        <vc:DateTimeValueConverter x:Key="DateTimeValueConverter" />
     </Page.Resources>
     <d:Page.DataContext>
-        <mvvm:BooksTreeViewModel/>
+        <mvvm:BooksTreeViewModel />
     </d:Page.DataContext>
     <Grid Background="Silver">
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="1*"/>
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="1*" />
         </Grid.RowDefinitions>
-        <Label Content="Books Tree-View:"/>
+        <Label Content="Books Tree-View:" />
         <Grid Grid.Row="1">
             <Grid.RowDefinitions>
-                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="3*"/>
-                <ColumnDefinition Width="4*"/>
+                <ColumnDefinition Width="3*" />
+                <ColumnDefinition Width="4*" />
             </Grid.ColumnDefinitions>
             <TreeView ItemsSource="{Binding Books}">
                 <behav:Interaction.Triggers>
                     <behav:EventTrigger EventName="SelectedItemChanged">
-                        <behav:InvokeCommandAction Command="{Binding DoSelectedItemChangedCommand}" PassEventArgsToCommand="True"/>
+                        <behav:InvokeCommandAction Command="{Binding DoSelectedItemChangedCommand}" PassEventArgsToCommand="True" />
                     </behav:EventTrigger>
                 </behav:Interaction.Triggers>
                 <TreeView.ItemTemplate>
                     <HierarchicalDataTemplate ItemsSource="{Binding Books}">
-                        <TextBlock Text="{Binding Category}" Tag="{Binding This}"/>
+                        <TextBlock Tag="{Binding This}" Text="{Binding Category}" />
                     </HierarchicalDataTemplate>
                 </TreeView.ItemTemplate>
             </TreeView>
             <StackPanel Grid.Column="1">
                 <Label>Author</Label>
-                <TextBox Text="{Binding SelectedBook.Author}"/>
+                <TextBox Text="{Binding SelectedBook.Author}" />
                 <Label>Title</Label>
-                <TextBox Text="{Binding SelectedBook.Title}"/>
+                <TextBox Text="{Binding SelectedBook.Title}" />
                 <Label>Category</Label>
-                <TextBox Text="{Binding SelectedBook.Category}"/>
+                <TextBox Text="{Binding SelectedBook.Category}" />
             </StackPanel>
         </Grid>
     </Grid>
