--- a/CSharpBible/MVVM_Tutorial/WpfApp1/Views/Frm_W2kMain.xaml
+++ b/CSharpBible/MVVM_Tutorial/WpfApp1/Views/Frm_W2kMain.xaml
@@ -1,8 +1,8 @@
-﻿<!-- Generated from LFM file -->
+﻿<!--  Generated from LFM file  -->
 <Window
+    x:Class="WpfApp.Views.Frm_W2kMain"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    x:Class="GeneratedNamespace.Win2kAppForm"
     Title="Client-Anwendung für Windows 2000"
     Width="466"
     Height="308"
@@ -10,52 +10,88 @@
     WindowStartupLocation="CenterScreen">
     <DockPanel>
         <Menu DockPanel.Dock="Top">
-            <MenuItem Header="_amp;Datei" x:Name="File1">
-                <MenuItem Header="_amp;Neu" InputGestureText="Ctrl+N" x:Name="FileNewItem" />
-                <MenuItem Header="Ö_amp;ffnen" InputGestureText="Ctrl+O" x:Name="FileOpenItem" />
-                <MenuItem Header="_amp;Speichern" InputGestureText="Ctrl+S" x:Name="FileSaveItem" />
-                <MenuItem Header="Speichern _amp;unter..." x:Name="FileSaveAsItem" />
+            <MenuItem x:Name="File1" Header="_amp;Datei">
+                <MenuItem
+                    x:Name="FileNewItem"
+                    Header="_amp;Neu"
+                    InputGestureText="Ctrl+N" />
+                <MenuItem
+                    x:Name="FileOpenItem"
+                    Header="Ö_amp;ffnen"
+                    InputGestureText="Ctrl+O" />
+                <MenuItem
+                    x:Name="FileSaveItem"
+                    Header="_amp;Speichern"
+                    InputGestureText="Ctrl+S" />
+                <MenuItem x:Name="FileSaveAsItem" Header="Speichern _amp;unter..." />
                 <Separator />
-                <MenuItem Header="Sen_amp;den" x:Name="FileSendItem" />
+                <MenuItem x:Name="FileSendItem" Header="Sen_amp;den" />
                 <Separator />
-                <MenuItem Header="_amp;Beenden" x:Name="FileExitItem" />
+                <MenuItem x:Name="FileExitItem" Header="_amp;Beenden" />
             </MenuItem>
-            <MenuItem Header="_amp;Bearbeiten" x:Name="Edit1">
-                <MenuItem Header="_amp;Ausschneiden" InputGestureText="Ctrl+X" x:Name="CutItem" />
-                <MenuItem Header="_amp;Kopieren" InputGestureText="Ctrl+C" x:Name="CopyItem" />
-                <MenuItem Header="_amp;Einfügen" InputGestureText="Ctrl+V" x:Name="PasteItem" />
+            <MenuItem x:Name="Edit1" Header="_amp;Bearbeiten">
+                <MenuItem
+                    x:Name="CutItem"
+                    Header="_amp;Ausschneiden"
+                    InputGestureText="Ctrl+X" />
+                <MenuItem
+                    x:Name="CopyItem"
+                    Header="_amp;Kopieren"
+                    InputGestureText="Ctrl+C" />
+                <MenuItem
+                    x:Name="PasteItem"
+                    Header="_amp;Einfügen"
+                    InputGestureText="Ctrl+V" />
             </MenuItem>
-            <MenuItem Header="_amp;Hilfe" x:Name="Help1">
-                <MenuItem Header="_amp;Info..." x:Name="HelpAboutItem" />
+            <MenuItem x:Name="Help1" Header="_amp;Hilfe">
+                <MenuItem x:Name="HelpAboutItem" Header="_amp;Info..." />
             </MenuItem>
         </Menu>
         <Canvas>
-            <StatusBar Canvas.Left="0" Canvas.Top="246" Width="450" Height="23" x:Name="StatusBar">
-            </StatusBar>
-            <ToolBar Canvas.Left="0" Canvas.Top="0" Width="450" Height="24" x:Name="ToolBar1">
-                <!-- ImageIndex: 6 -->
-                <Button ToolTip="Neu|Neue Datei erstellen" x:Name="ToolButton1" />
-                <!-- ImageIndex: 7 -->
-                <Button ToolTip="Öffnen|Datei öffnen" x:Name="ToolButton2" />
-                <!-- ImageIndex: 8 -->
-                <Button ToolTip="Speichern|Aktuelle Datei speichern" x:Name="ToolButton3" />
+            <StatusBar
+                x:Name="StatusBar"
+                Canvas.Left="0"
+                Canvas.Top="246"
+                Width="450"
+                Height="23" />
+            <ToolBar
+                x:Name="ToolBar1"
+                Canvas.Left="0"
+                Canvas.Top="0"
+                Width="450"
+                Height="24">
+                <!--  ImageIndex: 6  -->
+                <Button x:Name="ToolButton1" ToolTip="Neu|Neue Datei erstellen" />
+                <!--  ImageIndex: 7  -->
+                <Button x:Name="ToolButton2" ToolTip="Öffnen|Datei öffnen" />
+                <!--  ImageIndex: 8  -->
+                <Button x:Name="ToolButton3" ToolTip="Speichern|Aktuelle Datei speichern" />
                 <Separator />
-                <!-- ImageIndex: 15 -->
-                <Button ToolTip="Senden|Aktuelle Datei per E-Mail verschicken" x:Name="ToolButton5" />
+                <!--  ImageIndex: 15  -->
+                <Button x:Name="ToolButton5" ToolTip="Senden|Aktuelle Datei per E-Mail verschicken" />
                 <Separator />
-                <!-- ImageIndex: 0 -->
-                <Button ToolTip="Ausschneiden|Markiertes Objekt in die Zwischenablage verschieben" x:Name="ToolButton7" />
-                <!-- ImageIndex: 1 -->
-                <Button ToolTip="Kopieren|Markiertes Objekt in die Zwischenablage kopieren" x:Name="ToolButton8" />
-                <!-- ImageIndex: 2 -->
-                <Button ToolTip="Einfügen|Inhalt der Zwischenablage einfügen" x:Name="ToolButton9" />
+                <!--  ImageIndex: 0  -->
+                <Button x:Name="ToolButton7" ToolTip="Ausschneiden|Markiertes Objekt in die Zwischenablage verschieben" />
+                <!--  ImageIndex: 1  -->
+                <Button x:Name="ToolButton8" ToolTip="Kopieren|Markiertes Objekt in die Zwischenablage kopieren" />
+                <!--  ImageIndex: 2  -->
+                <Button x:Name="ToolButton9" ToolTip="Einfügen|Inhalt der Zwischenablage einfügen" />
             </ToolBar>
-            <TextBox Text="" Canvas.Left="0" Canvas.Top="24" Width="450" Height="222" AcceptsReturn="True" AcceptsTab="True" TextWrapping="Wrap" x:Name="RichEdit1" />
-            <!-- Non-visual: TActionList Name="ActionList1" -->
-            <!-- Non-visual: TImageList Name="ImageList1" -->
-            <!-- Unknown component: TOpenDialog Name="OpenDialog" -->
-            <!-- Unknown component: TSaveDialog Name="SaveDialog" -->
-            <!-- Unknown component: TSaveDialog Name="SaveDialog1" -->
+            <TextBox
+                x:Name="RichEdit1"
+                Canvas.Left="0"
+                Canvas.Top="24"
+                Width="450"
+                Height="222"
+                AcceptsReturn="True"
+                AcceptsTab="True"
+                Text=""
+                TextWrapping="Wrap" />
+            <!--  Non-visual: TActionList Name="ActionList1"  -->
+            <!--  Non-visual: TImageList Name="ImageList1"  -->
+            <!--  Unknown component: TOpenDialog Name="OpenDialog"  -->
+            <!--  Unknown component: TSaveDialog Name="SaveDialog"  -->
+            <!--  Unknown component: TSaveDialog Name="SaveDialog1"  -->
         </Canvas>
     </DockPanel>
 </Window>
